--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
     <div class="mdl-dialog__actions mdl-dialog__actions--full-width">
       <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
               style="text-align: center;" type="submit">
-        Pay
+        Sign up
       </button>
       <button ;
               class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
